--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
 <body>
 
 <p id="demo"></p>
-
+<p id="demo2"></p>
 <script>
 document.getElementById("demo").innerHTML = 
 "Screen width is " + screen.width;
-</script>
 
+document.getElementById("demo2").innerHTML = 
+"Screen height is " + screen.height;
+</script>
+     
 </body>
 </html>
