--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 <p id="demo2"></p>
 <script>
 document.getElementById("demo").innerHTML = 
-"Screen width is " + screen.width;
+"Screen width is " + window.innerWidth;
 
 document.getElementById("demo2").innerHTML = 
-"Screen height is " + screen.height;
+"Screen height is " + window.innerHeight;
 </script>
      
 </body>
